--- a/jpashop/pom.xml
+++ b/jpashop/pom.xml
@@ -16,6 +16,12 @@
     <dependencies>
         <!-- JPA 하이버네이트 -->
         <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.12</version>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-entitymanager</artifactId>
             <version>5.3.10.Final</version>
